# basemind

./: .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  Taskfile.yaml  deny.toml  gemini-extension.json  kimi.plugin.json  package.json
.agents/plugins/: marketplace.json
.ai-rulez/: .generated-manifest.json  config.toml
.ai-rulez/context/: code-style.md  crate-layout.md  scanner-pipeline.md
.ai-rulez/rules/: release-versioning.md  schema-and-blob-compat.md
.claude-plugin/: marketplace.json  plugin.json  statusline.sh
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/workflows/: publish.yaml  publish.yml
commands/: bm-statusline.md
hooks/: run-hook.cmd  session-start
npm-package/: README.md  index.js  install.js  package.json
opencode-plugin/: package.json
pip-package/: README.md  pyproject.toml
pip-package/basemind/: __init__.py  downloader.py
pip-package/gitmind/: __init__.py  cli.py  downloader.py
schema/: basemind-config-v1.schema.json
scripts/: mcp-launch.sh  release-bump.sh
src/: git.rs  lang.rs  lib.rs  main.rs  mcp.rs  query.rs  render.rs  scanner.rs  scanner_docs.rs  store.rs  version.rs  watcher.rs
src/a2a/: server.rs
src/comms/: daemon.rs  protocol.rs
src/config/: documents.rs  layered.rs  mod.rs  v1.rs
src/extract/: doc.rs  l1.rs  l2.rs  mod.rs
src/git/: mod.rs  remote.rs
src/index/: keys.rs  mod.rs  (+1 more)
tests/: a2a_smoke.rs  concurrency_smoke.rs  config_schema.rs  git_smoke.rs  harden.rs  mcp_smoke.rs  scan_smoke.rs  schema_bump.rs  shells_smoke.rs
(+25 files in other folders)
